@@ -20,6 +20,11 @@ Features and improvements:
 
 Bugfixes:
 
+- For OPARI2-instrumented codes that use OpenMP criticals the mapping
+  to Score-P critical objects was erroneous. As a consequence,
+  lock-contention analysis for these criticals unfortunatly was
+  erroneous too.
+
 ------------------- Released version 5.0 -----------------------------
 
 Major features:
